Minor fixes and overflow-x

--- a/css/general.css
+++ b/css/general.css
@@ -76,6 +76,7 @@ body {
   font-family: 'Roboto', sans-serif;
   line-height: 1;
   font-weight: 400;
+  overflow-x: hidden;
 }
 
 ul {
