--- a/css/style.css
+++ b/css/style.css
@@ -647,7 +647,7 @@ hr {
   border: none;
   background-color: rgba(255, 255, 255, 0.5);
   grid-column: 1 / -1;
-
+  width: 100%;
   margin-bottom: 4rem;
 }
 
